--- a/index_files/styles.css
+++ b/index_files/styles.css
@@ -1,6 +1,38 @@
-body {
-    color: #40514e;
-    margin: 0;
-    text-align: center;
-    font-family: "Merriweather", serif;
-  }
+body{
+  background-color: #ffae42;
+}
+
+.top-container {
+  background-color: #EDF5E1;
+  text-align: center;
+  position: relative;
+}
+
+.middle-container {
+  background-color: #ffae42;
+  position: relative;
+}
+
+h1 {
+  color: #000000;
+  font-size: 5.625rem;
+  margin: 50px auto 0 auto;
+  font-family: "Rubik", sans-serif, bold;
+  font-weight: 700;
+  font-optical-sizing: auto;
+  padding-bottom: 10px;
+}
+
+h2 {
+  color: #EDF5E1;
+  font-size: 5.625rem;
+  margin: 50px auto 0 auto;
+  font-family: "Rubik", sans-serif;
+  font-weight: 300;
+  font-optical-sizing: auto;
+  font-size: 18px
+}
+
+.profile-pic {
+  border-radius: 50%;
+}
