--- a/index_files/styles.css
+++ b/index_files/styles.css
@@ -1,15 +1,75 @@
 body{
-  background-color: #ffae42;
+  background-color: #EDF5E1;
 }
 
+.navigation-bar {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.links-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+
+.linkedin-button,
+.github-button {
+    border-radius: 50%;
+    text-decoration: none;
+    color: #fff;
+    display: inline-flex;
+    align-items: center;
+    transition: background-color 0.3s ease;
+    margin-right: 20px;
+}
+
+.linkedin-button img,
+.github-button img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 20px;
+}
+
+.icon-container img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+
+.linkedin-button:hover,
+.github-button:hover {
+  background-color: #808080;
+  border-radius: 100%;
+}
+
+
+.links {
+  margin-right: 8px;
+}
 .top-container {
-  background-color: #EDF5E1;
+  margin-top: 100px;
+  background-color: #00FF7F;
   text-align: center;
   position: relative;
 }
 
 .middle-container {
-  background-color: #ffae42;
+  margin-top: 100px;
+  display: flex;
+  background-color: #EDF5E1;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottom-container {
+  text-align: center;
+  margin-top: 100px;
+  background-color: #EDF5E1;
   position: relative;
 }
 
@@ -24,8 +84,17 @@ h1 {
 }
 
 h2 {
-  color: #EDF5E1;
-  font-size: 5.625rem;
+  color: #000000;
+  margin: 50px auto 0 auto;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-optical-sizing: auto;
+  padding-bottom: 10px;
+  font-size: 32px
+}
+
+h3 {
+  color: #000000;
   margin: 50px auto 0 auto;
   font-family: "Rubik", sans-serif;
   font-weight: 300;
@@ -35,4 +104,41 @@ h2 {
 
 .profile-pic {
   border-radius: 50%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input,
+textarea {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 50%;
+}
+
+textarea {
+  resize: vertical;
+}
+
+input[type="submit"] {
+  width: 10%;
+  background-color: #228B22;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+  background-color: #808080;
 }
