--- a/index_files/styles.css
+++ b/index_files/styles.css
@@ -48,10 +48,10 @@ body{
 }
 
 #home {
-  height: 80vh; /* 100% of the viewport height */
+  height: 100vh; /* 100% of the viewport height */
   width: 100vw; /* 100% of the viewport width */
   display: flex;
-  background-color: #00FF7F;
+  background-color: #FFA500;
   text-align: center;
   position: relative;
   justify-content: center;
@@ -59,13 +59,69 @@ body{
   text-align: center;
 }
 
-.about {
-  margin-top: 100px;
-  display: flex;
+#about{
   background-color: #EDF5E1;
   position: relative;
   justify-content: center;
   align-items: center;
+  text-align: center;
+}
+
+#projects{
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  gap: 20px;
+}
+
+.project-card {
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+  margin-bottom: 20px;
+  width: 100%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.project-card img {
+  width: 100%; /* Set the image width to 100% of its container */
+  height: 300px; /* Maintain the aspect ratio */
+  transition: transform 0.3s ease-in-out;
+}
+
+.project-card h2{
+  font-size: 24px
+}
+
+.project-card:hover,
+.project-card.active {
+  transform: scale(1.05);
+}
+
+.project-details {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(237, 245, 225, 0.9);
+  padding: 20px;
+  box-sizing: border-box;
+  overflow: auto;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.project-details.active {
+  display: block;
+  opacity: 1;
 }
 
 #contact {
@@ -73,6 +129,15 @@ body{
   margin-top: 100px;
   background-color: #EDF5E1;
   position: relative;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
 }
 
 h1 {
@@ -194,4 +259,78 @@ input[type="submit"]:hover {
   display: flex;
   margin: 0;
   padding: 0;
+}
+
+#scroll-arrow {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
+#scroll-arrow svg {
+  width: 100%;
+  height: auto;
+  margin: 5px 0;
+}
+
+.fade-in {
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
+}
+
+@keyframes fadeIn{
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
 }
